[package]
authors = [
	"Fredrik Portström <https://portstrom.com>",
	"Sören Meier <s@renmeier.ch>"
]
description = "Parse wiki text from Mediawiki into a tree of elements"
edition = "2024"
license-file = "LICENSE"
name = "parse-wiki-text-2"
readme = "readme.md"
repository = "https://github.com/soerenmeier/parse-wiki-text-2"
version = "0.1.6-alpha.0"

[lints]
workspace = true

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
